--- a/Rhino.Licensing/Rhino.Licensing.csproj
+++ b/Rhino.Licensing/Rhino.Licensing.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Rhino.Licensing</RootNamespace>
     <AssemblyName>Rhino.Licensing</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\ayende-open-source.snk</AssemblyOriginatorKeyFile>
@@ -57,8 +57,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -82,23 +82,17 @@
     <Compile Include="AbstractLicenseValidator.cs" />
     <Compile Include="Discovery\DiscoveryClient.cs" />
     <Compile Include="Discovery\DiscoveryHost.cs" />
-    <Compile Include="FloatingLicenseNotAvailableException.cs" />
     <Compile Include="LicenseExpiredException.cs" />
     <Compile Include="InvalidationType.cs" />
+    <Compile Include="LicenseValidatorFactory.cs" />
     <Compile Include="StringLicenseValidator.cs" />
-    <Compile Include="ILicensingService.cs" />
-    <Compile Include="ISubscriptionLicensingService.cs" />
     <Compile Include="LicenseFileNotFoundException.cs" />
-    <Compile Include="LicenseGenerator.cs" />
-    <Compile Include="LicenseType.cs" />
     <Compile Include="LicenseValidator.cs" />
     <Compile Include="LicenseNotFoundException.cs" />
-    <Compile Include="LicensingService.cs" />
     <Compile Include="$(SolutionDir)\Solution Items\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RhinoLicensingException.cs" />
     <Compile Include="SntpClient.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +118,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rhino.Licensing.Contracts\Rhino.Licensing.Contracts.csproj">
+      <Project>{31c44753-503b-4cdd-b4bd-b7d5a1b1bec5}</Project>
+      <Name>Rhino.Licensing.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
