--- a/Rhino.Licensing.AdminTool/Rhino.Licensing.AdminTool.csproj
+++ b/Rhino.Licensing.AdminTool/Rhino.Licensing.AdminTool.csproj
@@ -1,57 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9C11E95F-82A2-4A40-8E15-33487A64F7D2}</ProjectGuid>
+    <TargetFramework>net48</TargetFramework>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rhino.Licensing.AdminTool</RootNamespace>
-    <AssemblyName>Rhino.Licensing.AdminTool</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WarningLevel>4</WarningLevel>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>App.ico</ApplicationIcon>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Caliburn.Core">
@@ -93,217 +46,58 @@
     <Reference Include="J832.Wpf.BagOTricksLib">
       <HintPath>..\SharedLibs\J832.Wpf.BagOTricksLib.dll</HintPath>
     </Reference>
-    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a">
-      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\SharedLibs\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Controls\FXPopup.cs" />
-    <Compile Include="Dialogs\FileDialog.cs" />
-    <Compile Include="Dialogs\OpenFileDialog.cs" />
-    <Compile Include="Dialogs\SaveFileDialog.cs" />
-    <Compile Include="Extensions\ContainerExtensions.cs" />
-    <Compile Include="Extensions\ReflectionExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Factories\IDialogFactory.cs" />
-    <Compile Include="Factories\IViewModelFactory.cs" />
-    <Compile Include="Infrastructure\WindowManager.cs" />
-    <Compile Include="Model\License.cs" />
-    <Compile Include="Model\Product.cs" />
-    <Compile Include="Model\Project.cs" />
-    <Compile Include="Model\UserData.cs" />
-    <Compile Include="Services\DialogService.cs" />
-    <Compile Include="Services\ExportService.cs" />
-    <Compile Include="Services\IDialogService.cs" />
-    <Compile Include="Services\IExportService.cs" />
-    <Compile Include="Services\IProjectService.cs" />
-    <Compile Include="Services\IStatusService.cs" />
-    <Compile Include="Services\ProjectService.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-    <Compile Include="Startup\FactoryRegistration.cs" />
-    <Compile Include="Startup\GuyWire.cs" />
-    <Compile Include="Startup\ServiceRegistration.cs" />
-    <Compile Include="Startup\ViewModelRegistration.cs" />
-    <Compile Include="Startup\ViewRegistration.cs" />
-    <Compile Include="ValueConverters\BoolToVisibilityCollapsedConverter.cs" />
-    <Compile Include="ValueConverters\ExpirationDateConverter.cs" />
-    <Compile Include="ViewModels\AboutViewModel.cs" />
-    <Compile Include="ViewModels\FileDialogViewModel.cs" />
-    <Compile Include="ViewModels\IFileDialogViewModel.cs" />
-    <Compile Include="ViewModels\ILicenseHolder.cs" />
-    <Compile Include="ViewModels\ILicenseInfoViewModel.cs" />
-    <Compile Include="ViewModels\IssueLicenseViewModel.cs" />
-    <Compile Include="ViewModels\IUserDataViewModel.cs" />
-    <Compile Include="ViewModels\LicenseInfoViewModel.cs" />
-    <Compile Include="ViewModels\OpenFileDialogViewModel.cs" />
-    <Compile Include="ViewModels\ProjectViewModel.cs" />
-    <Compile Include="ViewModels\SaveFileDialogViewModel.cs" />
-    <Compile Include="ViewModels\ShellViewModel.cs" />
-    <Compile Include="ViewModels\UserDataViewModel.cs" />
-    <Compile Include="Views\AboutView.xaml.cs">
-      <DependentUpon>AboutView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\IssueLicenseView.xaml.cs">
-      <DependentUpon>IssueLicenseView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\LicenseInfoView.xaml.cs">
-      <DependentUpon>LicenseInfoView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ProjectView.xaml.cs">
-      <DependentUpon>ProjectView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ShellView.xaml.cs">
-      <DependentUpon>ShellView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserDataView.xaml.cs">
-      <DependentUpon>UserDataView.xaml</DependentUpon>
-    </Compile>
+    <ProjectReference Include="..\Rhino.Licensing.Contracts\Rhino.Licensing.Contracts.csproj" />
+    <ProjectReference Include="..\Rhino.Licensing\Rhino.Licensing.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="$(SolutionDir)\Solution Items\SolutionInfo.cs">
-      <Link>Properties\SolutionInfo.cs</Link>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <AppDesigner Include="Properties\" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Theme\Animations.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Theme\AppStyles.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Theme\DataTemplates.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Theme\DatePickerStyles.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Theme\ExpressionDark.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\AboutView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\IssueLicenseView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\LicenseInfoView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\ProjectView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\ShellView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UserDataView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <None Remove="App.xaml" />
+    <ApplicationDefinition Include="App.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
-      <Visible>False</Visible>
-      <ProductName>Windows Installer 3.1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="App.ico" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Remove="Images\Close.png" />
+    <Resource Include="Images\Close.png" />
+    <None Remove="Images\Copy.png" />
+    <Resource Include="Images\Copy.png" />
+    <None Remove="Images\Export.png" />
+    <Resource Include="Images\Export.png" />
+    <None Remove="Images\GenerateKey.png" />
     <Resource Include="Images\GenerateKey.png" />
+    <None Remove="Images\New.png" />
     <Resource Include="Images\New.png" />
+    <None Remove="Images\NewLicense.png" />
     <Resource Include="Images\NewLicense.png" />
+    <None Remove="Images\Open.png" />
     <Resource Include="Images\Open.png" />
+    <None Remove="Images\Paste.png" />
+    <Resource Include="Images\Paste.png" />
+    <None Remove="Images\Save.png" />
     <Resource Include="Images\Save.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Close.png" />
+    <None Remove="Views\UserDataView.xaml" />
+    <Page Include="Views\UserDataView.xaml" />
+    <None Remove="Views\ShellView.xaml" />
+    <Page Include="Views\ShellView.xaml" />
+    <None Remove="Views\ProjectView.xaml" />
+    <Page Include="Views\ProjectView.xaml" />
+    <None Remove="Views\LicenseInfoView.xaml" />
+    <Page Include="Views\LicenseInfoView.xaml" />
+    <None Remove="Views\IssueLicenseView.xaml" />
+    <Page Include="Views\IssueLicenseView.xaml" />
+    <None Remove="Views\AboutView.xaml" />
+    <Page Include="Views\AboutView.xaml" />
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Copy.png" />
-    <Resource Include="Images\Paste.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rhino.Licensing.Contracts\Rhino.Licensing.Contracts.csproj">
-      <Project>{31c44753-503b-4cdd-b4bd-b7d5a1b1bec5}</Project>
-      <Name>Rhino.Licensing.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Rhino.Licensing\Rhino.Licensing.csproj">
-      <Project>{05EFD7EB-F0FB-4B65-8E4A-C8FF8DDC6A78}</Project>
-      <Name>Rhino.Licensing</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>PublicSettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Export.png" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
