--- a/Rhino.Licensing.Wcf/Rhino.Licensing.Wcf.csproj
+++ b/Rhino.Licensing.Wcf/Rhino.Licensing.Wcf.csproj
@@ -6,9 +6,9 @@
       <ProjectReference Include="..\Rhino.Licensing.Contracts\Rhino.Licensing.Contracts.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="log4net" Version="2.0.8" />
+      <Reference Include="System.ServiceModel" />
     </ItemGroup>
     <ItemGroup>
-      <Reference Include="System.ServiceModel" />
+      <PackageReference Include="Serilog" Version="2.9.0" />
     </ItemGroup>
 </Project>
